[package]
name = "z_table"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This crate provides a lookup function for the standard normal table, also called unit normal table or Z table."
repository = "https://github.com/fabianboesiger/z-table/"
readme = "README.md"