[package]
name = "z_table"
version = "0.1.1"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides a lookup function for the standard normal table, also called Z table."
repository = "https://github.com/fabianboesiger/z-table/"
readme = "README.md"
keywords = ["standard-normal-table", "z-table", "lookup", "distribution", "normal-distribution"]
categories = ["science"]